# Coding_In_University

./: .gitignore  README.md
4.15C++500r/: AvailableTiles.h  CMakeLists.txt  CellChooser.cpp  CellChooser.h  CellId.cpp  CellId.h  Dice.h  TestHelper.cpp  TestHelper.h  TestTilePoints6.cpp  Tile.cpp  TileMoney.h  main.cpp
40r/: privous.cpp
800r 2.28/: Board.cpp  Board.h  BoardSize.cpp  CellId.h  Dice.cpp  Player.cpp  Tile.h
Blazor Webassembly/MudBlazor_Theme/: Acme.BookStore.sln
Blazor Webassembly/MudBlazor_Theme_Rider/: .gitignore  BookStore.sln
C# Code/TestSerilog/: Program.cs  TestSerilog.csproj  TestSerilog.sln
C# Code/TodoApp/: README.md  TodoApp.sln  migrate-database.ps1
C# Code/WebApplication1/: WebApplication1.sln
C++ Code/4.15C++500r/: AvailableTiles.cpp  (+12 more)
C++ Code/800r 2.28/: AvailableTiles.cpp  CMakeLists.txt  CellId.cpp  Dice.h  TestAvailableTiles3.cpp  TestBoard3.cpp  TestTile3.cpp  Tile.cpp  main.cpp
Final/: Only0And1.txt  config.txt  huffmancode.h  in_outstream.h  write_message.h
Resume/: 2023_Feb_Amazon.tex
SSMcode/: pom.xml
Tensorflow/: test.py
calculateFinal/: LStack.h  optr.h
compile/: a.out
delete/: 文字文稿2.docx
js100r/: code1.js
map60r/: CMakeLists.txt  main.cpp  test.txt
morethan100r/: neywork.txt
pkingUniversity/: 1.py  forward.py  generateds.py
pyqt5/: run.py  untitled.ui  untitled1.py  untitled2.py  untitled2.ui
pyqt5test/: demo_0628.qss
python500r/: test.py
saolei/: CMakeLists.txt
字典60r/: CMakeLists.txt
爬虫50r/: data.xls  main.py
网页大赛/: blog.html  single.html  single1.html  single3.html  single4.html
(+285 files in other folders)
